--- a/src/app/clip/clip.component.html
+++ b/src/app/clip/clip.component.html
@@ -11,8 +11,8 @@
         <!-- Video Editor -->
         <div class="relative aspect-video">
             <!-- Video Player -->
-            <video controls #videoPlayer crossorigin
-               class="video-js vjs-theme-forest mx-auto">
+            <video controls crossorigin
+               class="video-js vjs-theme-forest mx-auto" [src]="clip.url">
 
             </video>
         </div>
